--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/scripts.js" type="text/javascript">
-
-    </script>
+    <script src="js/jquery.js"type="text/javascript"></script>
+    <script src="js/scripts.js" type="text/javascript"></script>
     <meta charset="utf-8">
     <title></title>
   </head>
