--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/jquery.js"type="text/javascript"></script>
-    <script src="js/scripts.js" type="text/javascript"></script>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="js/jquery.js" type="text/javascript"></script>
+  <script src="js/scripts.js" type="text/javascript"></script>
+  <meta charset="utf-8">
+  <title>Ping Pong</title>
+</head>
+
+<body>
+  <div class="container">
+
+    <div class="jumbotron">
+      <h1>My Ping Pong Game</h1>
+    </div>
+
+    <div class="sidebar">
+      <h2>About PingPong</h2>
+      <h3>Created by:</h3>
+      <h4>Cherucole</h4>
+      <br>
+      <h3>About Me</h3>
+      <ul>
+        <li>
+          <h4>My Github Profile</h4> </li>
+        <li>
+          <h4>My Twitter</h4> </li>
+      </ul>
+
+    </div>
+
+<h2>Let's Play!</h2>
+<h3>Rules:</h3>
+<p>Ping Pong will count to your number from 1 with the following exceptions:</p>
+<ol id="myRules">
+  <li>Numbers divisible by 3 will become "ping"</li>
+  <li>Numbers divisible by 5 become "pong"</li>
+  <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+</ol>
+<br>
+
+<form id="myForm" >
+
+</form>
+
+  </div>
+
+</body>
+
 </html>
