--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
 </ol>
 <br>
 
-<form id="myForm" >
+<form id="myForm" class="form-inline">
+  <div class="form-group">
+    <label for="userInput"> Enter any number:</label>
+    <input type="text"  id="userInput" placeholder="Enter number here">
+  </div>
+
+  <button type="submit" class="btn btn-danger">Submit</button>
 
 </form>
 
