added sidebar links

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
       <br>
       <h3>About Me</h3>
       <ul>
-        <li>
-          <h4>My Github Profile</h4> </li>
-        <li>
-          <h4>My Twitter</h4> </li>
+        <li class="linkstext" ><a href="https://github.com/cherucole"> <h4>My Github Profile</h4></a> </li>
+          <li class="linkstext"><a href="https://twitter.com/cherucole?lang=en"><h4>My Twitter</h4></a> </li>
+
       </ul>
 
     </div>
@@ -51,6 +50,7 @@
   <button type="submit" class="btn btn-danger">Submit</button>
 
 </form>
+<p class="display"></p>
 
   </div>
 
