linked forms and html display

--- a/index.html
+++ b/index.html
@@ -24,33 +24,36 @@
       <br>
       <h3>About Me</h3>
       <ul>
-        <li class="linkstext" ><a href="https://github.com/cherucole"> <h4>My Github Profile</h4></a> </li>
-          <li class="linkstext"><a href="https://twitter.com/cherucole?lang=en"><h4>My Twitter</h4></a> </li>
+        <li class="linkstext">
+          <a href="https://github.com/cherucole">
+            <h4>My Github Profile</h4></a>
+        </li>
+        <li class="linkstext"><a href="https://twitter.com/cherucole?lang=en"><h4>My Twitter</h4></a> </li>
 
       </ul>
 
     </div>
 
-<h2>Let's Play!</h2>
-<h3>Rules:</h3>
-<p>Ping Pong will count to your number from 1 with the following exceptions:</p>
-<ol id="myRules">
-  <li>Numbers divisible by 3 will become "ping"</li>
-  <li>Numbers divisible by 5 become "pong"</li>
-  <li>Numbers divisible by 3 and 5 become "pingpong"</li>
-</ol>
-<br>
+    <h2>Let's Play!</h2>
+    <h3>Rules:</h3>
+    <p>Ping Pong will count to your number from 1 with the following exceptions:</p>
+    <ol id="myRules">
+      <li>Numbers divisible by 3 will become "ping"</li>
+      <li>Numbers divisible by 5 become "pong"</li>
+      <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+    </ol>
+    <br>
 
-<form id="myForm" class="form-inline">
-  <div class="form-group">
-    <label for="userInput"> Enter any number:</label>
-    <input type="text"  id="userInput" placeholder="Enter number here">
-  </div>
+    <form id="myForm" class="form-inline">
+      <div class="form-group">
+        <label for="userInput"> Enter any number:</label>
+        <input type="text" id="userInput" placeholder="Enter number here">
+      </div>
 
-  <button type="submit" class="btn btn-danger">Submit</button>
+      <button type="submit" class="btn btn-danger">Submit</button>
 
-</form>
-<p class="display"></p>
+    </form>
+    <p class="display"></p>
 
   </div>
 
