list of numbers showing in html

--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
       <button type="submit" class="btn btn-danger">Submit</button>
 
     </form>
-    <p class="display"></p>
-
+    <p id="display"></p>
   </div>
-
 </body>
 
 </html>
