Made content responsive to mobile device

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 
 <body>
 
-    <div class="jumbotron">
-      <h1>My Ping Pong Game</h1>
-    </div>
+  <div class="jumbotron">
+    <h1>My Ping Pong Game</h1>
+  </div>
 
+
+<div class="row">
+
+  <div class="col-md-4">
     <div class="sidebar">
       <h2>About PingPong</h2>
       <h3>Created by:</h3>
@@ -23,16 +27,15 @@
       <br>
       <h3>About Me</h3>
       <ul>
-        <li class="linkstext">
-          <a href="https://github.com/cherucole">
-            <h4>My Github Profile</h4></a>
+        <li class="linkstext"><a href="https://github.com/cherucole"><h4>My Github Profile</h4></a>
         </li>
         <li class="linkstext"><a href="https://twitter.com/cherucole?lang=en"><h4>My Twitter</h4></a> </li>
-
       </ul>
-
     </div>
 
+  </div>
+
+  <div id="content" class="col-md-8">
     <h2>Let's Play!</h2>
     <h3>Rules:</h3>
     <p>Ping Pong will count to your number from 1 with the following exceptions:</p>
@@ -41,7 +44,6 @@
       <li>Numbers divisible by 5 become "pong"</li>
       <li>Numbers divisible by 3 and 5 become "pingpong"</li>
     </ol>
-    <br>
 
     <form id="myForm" class="form-inline">
       <div class="form-group">
@@ -49,11 +51,21 @@
         <label for="userInput"> Enter any number:</label>
         <input type="text" id="userInput" placeholder="Enter number here">
 
-      <button type="submit" class="btn btn-danger">Submit</button>
-    </div>
+        <button type="submit" class="btn btn-danger">Submit</button>
+      </div>
     </form>
-    <br>
-    <br>
+  </div>
+
+</div>
+
+
+
+
+
+
+  <br>
+  <br>
+  <br>
   <p id="display"></p>
 
 </body>
